[package]
name = "brainv"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
libc = "0.2"
winapi = { version = "0.3", features = ["memoryapi", "winnt", "basetsd", "processthreadsapi"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
#name = "hanoi"
#name = "serptri"
#name = "mandelbrot"
name = "mandelbrot-tiny"
#name = "pi-digits"
#name = "primes"
harness = false
